syntax = "proto3";
package gRPCDemo;


message AddRequest{
	int32 a = 1;
	int32 b = 2;
}

message AddReply{
	int32 c = 1;
	string msg = 2;
}
